fix z-index error wth sidebar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1711,7 +1711,7 @@ a:hover {
     -webkit-transition: all 0.25s linear;
     -o-transition: all 0.25s linear;
     display: block;
-    z-index: 3;
+    z-index: 5;
     position: absolute;
     top: 75px;
     left: -250px;
